--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
 Flask==0.10.1
+Flask-Migrate==1.3.0
+Flask-SQLAlchemy==2.0
+Flask-Script==2.0.5
 Jinja2==2.7.3
+Mako==1.0.0
 MarkupSafe==0.23
+SQLAlchemy==0.9.8
 Werkzeug==0.9.6
+alembic==0.7.1
+beautifulsoup4==4.3.2
 gunicorn==19.1.1
 itsdangerous==0.24
+nltk==3.0.0
+psycopg2==2.5.4
+requests==2.5.0
