--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,17 @@
-GitPython==0.1.7
-PAM==0.4.2
-Pillow==2.3.0
-Twisted-Core==13.2.0
-Twisted-Web==13.2.0
-adium-theme-ubuntu==0.3.4
-apt-xapian-index==0.45
-argparse==1.2.1
-brewer2mpl==1.4.1
-chardet==2.0.1
-colorama==0.2.5
-command-not-found==0.3
-debtagshw==0.1
-defer==1.0.6
-dirspec==13.10
-dnspython==1.11.1
-duplicity==0.6.23
-flake8==2.2.5
-html5lib==0.999
-httplib2==0.8
-ipython==2.3.0
-lockfile==0.8
-lxml==3.3.3
-matplotlib==1.4.2
-mccabe==0.2.1
-mercurial==2.8.2
-mock==1.0.1
-nose==1.3.4
-numpy==1.9.0
-oauthlib==0.6.1
-oneconf==0.3.7
-pep8==1.5.7
-pexpect==3.1
-piston-mini-client==0.7.5
-pyOpenSSL==0.13
-pycrypto==2.6.1
-pycups==1.9.66
-pycurl==7.19.3
-pyflakes==0.8.1
-pygobject==3.12.0
-pyparsing==2.0.3
-pyserial==2.6
-pysmbc==1.0.14.1
-python-apt==0.9.3.5
-python-dateutil==2.2
-python-debian==0.1.21-nmu2ubuntu2
-pytz==2014.7
-pyxdg==0.25
-reportlab==3.0
-requests==2.2.1
-sessioninstaller==0.0.0
-six==1.5.2
-software-center-aptd-plugins==0.0.0
-ssh-import-id==3.21
-system-service==0.1.6
-unity-lens-photos==1.0
-urllib3==1.7.1
-wsgiref==0.1.2
-xdiagnose==3.6.3build2
-zope.interface==4.0.5
+Flask==0.10.1
+Flask-Migrate==1.3.0
+Flask-SQLAlchemy==2.0
+Flask-Script==2.0.5
+Jinja2==2.7.3
+Mako==1.0.0
+MarkupSafe==0.23
+SQLAlchemy==0.9.8
+Werkzeug==0.9.6
+alembic==0.7.1
+beautifulsoup4==4.3.2
+gunicorn==19.1.1
+itsdangerous==0.24
+nltk==3.0.0
+numpy==1.9.1
+psycopg2==2.5.4
+requests==2.5.0
